# discord-user-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: relationship_fetch.rs  set_custom_status_smoke.rs
src/: builder.rs  cache.rs  cache_http.rs  client.rs  collector.rs  components.rs  content_safe.rs  context.rs  discord_user.rs  error.rs  events.rs  fmt.rs  framework.rs  gateway.rs  json.rs  lib.rs  mention.rs  message_builder.rs  modal.rs  operations.rs  permissions.rs  proto.rs  route.rs  typed_events.rs  typemap.rs  types.rs  utils.rs  validate.rs
src/operations/: automod.rs  channel.rs  guild.rs  message.rs  relationship.rs  scheduled_event.rs  slash_command.rs  soundboard.rs  stage.rs  status.rs  thread.rs  voice.rs  webhook.rs
src/types/: colour.rs  enums.rs  guild.rs  ids.rs  image_hash.rs  message.rs  relationship.rs  requests.rs  timestamp.rs  user.rs
tests/: error_test.rs  trait_test.rs
tests/fixtures/: settings_proto_response.b64
